# basilisc

./: .gitattributes  .gitignore  Cargo.toml  README.md  basc.sublime-project  basilisc.sublime-project  build.cmd  build.rs  build.sh
.github/workflows/: build-release.yaml  tests.yml
crates/basc-macros/: Cargo.toml
crates/basc-macros/src/: lib.rs  unpack_data.rs
crates/basilisc-base/: Cargo.toml
crates/basilisc-base/src/: keyword.rs  lib.rs  subarray.rs  token_iter.rs
crates/token-data-gen/: Cargo.toml
crates/token-data-gen/src/: cooked_keyword.rs  main.rs
meta-src/: cooked_keyword.rs  keyword.rs  subarray.rs  token_iter.rs
src/: common.rs  latin1.rs  lib.rs  line_numbers.rs  main.rs  mod-decls.rs  pack.rs  support.rs  token_data.rs  unpack.rs
src/pack/: byte_decode.rs  gaps.rs  token_scan.rs
src/support/: arrayvec_ext.rs  per_line_bits.rs
src/token_data/: test.rs
