[package]
name = "basc"
version = "0.1.0"
edition = "2021"
authors = ["Simon Harris <simon@pearfalse.com>"]

[dependencies]
gumdrop = "0.8"
ascii = "1.0"
arrayvec = "0.7"
thiserror = "1.0"
static_assertions = "1.1"

[profile.release]
lto = true
codegen-units = 1

[build-dependencies]
static_assertions = "1.1"
arrayvec = "0.7"
ascii = "1.0"
