[package]
name = "basc"
version = "0.2.0"
edition = "2021"
authors = ["Simon Harris <simon@pearfalse.com>"]

[dependencies]
gumdrop = "0.8"
arrayvec = "0.7"
thiserror = "1.0"
static_assertions = "1.1"
nonzero_ext = "0.3"
sptr = ">= 0.3"

[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
ascii = "1.0"
assert_hex = "0.2"

[build-dependencies]
static_assertions = "1.1"
nonzero_ext = "0.3"
lazy_static = "1.4"
arrayvec = "0.7"
ascii = "1.0"
