[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Simon Harris <simon@pearfalse.com>"]

[workspace.dependencies]
ascii = "1.0"
arrayvec = "0.7"
thiserror = "1.0"
static_assertions = "1.1"
nonzero_ext = "0.3"
sptr = ">= 0.3"

[package]
name = "basilisc"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
ascii = { workspace = true }
arrayvec = { workspace = true }
thiserror = { workspace = true }
static_assertions = { workspace = true }
nonzero_ext = { workspace = true }
sptr = { workspace = true }

gumdrop = "0.8"

[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
assert_hex = "0.2"

[build-dependencies]
static_assertions = "1.1"
nonzero_ext = "0.3"
lazy_static = "1.4"
arrayvec = "0.7"
ascii = "1.0"
